popup/timezonify-config.css
:root{
  --input-width: 97px;
}

body {
  margin: 0;
  font-family:Verdana, Geneva, Tahoma, sans-serif;
  min-width: 100px;
  font-size: 100%;
  
  padding: 0 20px;
  font-size: 12px;
  overflow-x: hidden;
  overflow-y:hidden;
}

#main-content{
  min-width: 300px;
}



.flex-center{
  display: flex;
  align-items: center;
  justify-content: center;
}

.flex-between{
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.justify-between{
  justify-content: space-between;
}

.header{
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: hidden;
    padding: 12px 12px 0 12px;
}

button {
  border-radius: 5px;
  color: white;
  background: rgb(55,76,97);
  padding: 6px;
  border: none;
  cursor:pointer;
  transition: 0.3s;
}

button:hover{
  opacity: 0.7;
}

.error{
  color: red;
}

#popup-title{
    margin: 0;
    line-height: 2em;
    font-size: 1.5em;
    font-weight: normal;
}

.text-indicator{
    font-weight: bold;
}

.logo{
    max-width: 64px;
}

.show {
  display: block;
}

.hide{
  display: none;
}


.options{
    font-size: 0.8em;
}

#enabled-indicator{
    line-height: 1.5rem;
    user-select:none;

}
.text-indicator{

    margin-right: .5em;
}

.toggle-timezonify-btn{
    cursor:pointer;
}

.timezone-container{
  display: flex;
  flex-direction: column;
  padding: 0 12px
}

.horizontal-input-group {

  display: inline-flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 2px

}

.timezone-group{
  display:flex;
  flex-direction: column;
  /* margin-bottom: 8px; */
}

.date-display{
  text-align: right;
  /* color: rgba(255,255,255, 0.6) */
  color: rgb(148,148,148);
}

.timezone-group > select {
  margin-right: 12px;
}

.timezone-selector{
  padding: 0 12px;
}

.select2-typography{
  font-size: 12px;
}

.select2-selection{
  padding: 0;
}

.form-switch {
    display: flex;
    align-items: center;
    justify-content: space-between;
    cursor: pointer;
    -webkit-tap-highlight-color: transparent;
  }
  
  .form-switch i {
    position: relative;
    display: inline-block;
    width: 46px;
    height: 26px;
    background-color: #e6e6e6;
    border-radius: 23px;
    vertical-align: text-bottom;
    transition: all 0.3s linear;
  }
  
  .form-switch i::before {
    content: "";
    position: absolute;
    left: 0;
    width: 42px;
    height: 22px;
    background-color: #fff;
    border-radius: 11px;
    transform: translate3d(2px, 2px, 0) scale3d(1, 1, 1);
    transition: all 0.25s linear;
  }
  
  .form-switch i::after {
    content: "";
    position: absolute;
    left: 0;
    width: 22px;
    height: 22px;
    background-color: #fff;
    border-radius: 11px;
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24);
    transform: translate3d(2px, 2px, 0);
    transition: all 0.2s ease-in-out;
  }
  
  .form-switch:active i::after {
    width: 28px;
    transform: translate3d(2px, 2px, 0);
  }
  
  .form-switch:active input:checked + i::after { transform: translate3d(16px, 2px, 0); }
  
  .form-switch input { display: none; }
  
  .form-switch input:checked + i { background-color: #4BD763; }
  
  .form-switch input:checked + i::before { transform: translate3d(18px, 2px, 0) scale3d(0, 0, 0); }
  
  .form-switch input:checked + i::after { transform: translate3d(22px, 2px, 0); }

  /* Tabs */
  .tab-group{
    display: flex;
  }

  .tab {
    padding: 4px 8px;
    cursor:pointer;
    background: rgba(255, 255, 0, 0.1);
    transition: 0.4s;
  }

  .tab:hover{
    background: rgba(255, 255, 0, 0.6);
  }

  .active-tab{
    background: rgba(255, 255, 0, 0.5);
  }
  .tab-content-group{
    padding: 0 12px 12px 12px;
  }

  .tab-group{
    
  }
  .tab-group, .tab-content-group{
    font-size: 0.75em;

  }

  .input-group{
    margin-bottom: 8px;
  }

  .time-input {
    height: 19px;
    width: 80px;
    text-align:center;
    font-family: sans-serif;
    /* min-width: var(--input-width); */
    margin-top: 4px;
    margin-bottom: 4px;
  }

  .from-time-input{
  }

  .divider{
    border-width: 0.1px;
    margin: 12px 0;
    border-color: rgba(0,0,0,0.2);
  }

  .converted-result-container{
    /* padding: 6px 0; */
  }

  .to-time-input{
    /* border: 1px solid rgba(0,0,0,0.8);
    height: 18px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: bold; */
  }

/* Select 2 Hack styles */

.select2-selection__rendered {
    line-height: 25px !important;
}
.select2-container .select2-selection--single {
    height: 25px !important;
}
.select2-selection__arrow {
    height: 25px !important;
}

.ui-menu-item{
  font-size: 12px;
}


.icon-divider-container {
  display: flex;
  justify-content: space-between;
  align-items: center;

}

.icon-divider{
  height: 1px;
  border: 0.5px solid gray;
  width: 100%;
}

.swap-btn{
  margin: 12px;
  cursor:pointer;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.swap-btn-icon {
  font-size: 24px;
}

.swap-btn-text{
  color:rgb(144,144,144)
}

